config/waybar/style.css
window#waybar {
    border:        none;
    border-radius: 0;
    font-family:   "Source Sans Pro Semibold", "Font Awesome", sans-serif;
    font-size:     16;
    box-shadow:    none;
    text-shadow:   none;
    transition-duration: 0s;
    color:      rgba(217, 216, 216, 1);
    background: rgba(0, 0, 0, 0.76);
}

window#waybar.solo {
    background: rgb(35, 31, 32);
}

#workspaces {
    margin: 0 5px;
}

#workspaces button {
    padding:    0 0px;
    color:      rgba(217, 216, 216, 0.4);
}

#workspaces button.visible {
    color:      rgba(217, 216, 216, 1);
}

#workspaces button.focused {
    border-top: 3px solid rgba(217, 216, 216, 0);
    border-bottom: 3px solid rgba(217, 216, 216, 0);
}

#workspaces button.urgent {
    border-bottom: 3px solid rgba(238, 46, 36, 1);
}

#workspaces button:hover {
    border-bottom: 3px solid #ffffff;
}

#workspaces button.focused {
    border-bottom: 3px solid #ffffff;
}

#pulseaudio {
    /* font-size: 26px; */
}

#custom-cpu_speed {
    min-width: 82px;
}

#tray,
#mode,
#battery,
#temperature,
#cpu,
#memory,
#network,
#pulseaudio,
#idle_inhibitor,
#backlight,
#clock-date,
#custom-storage,
#custom-cpu_speed,
#custom-powermenu,
#custom-spotify,
#custom-weather,
#custom-mail,
#custom-rofication,
#custom-media {
    margin:     0px 0px 0px 10px;
    padding: 0 5px;
    /* border-top: 3px solid rgba(217, 216, 216, 0.5); */
}
#custom-rofication {
  color: rgba(238, 56, 36, 1);
}
/* #clock {
    margin:     0px 16px 0px 10px;
    min-width:  140px;
} */

#battery.warning {
   color:       rgba(255, 210, 4, 1);
}

#battery.critical {
    color:      rgba(238, 46, 36, 1);
}

#battery.charging {
    color:      rgba(217, 216, 216, 1);
}

#custom-storage.warning {
    color:      rgba(255, 210, 4, 1);
}

#custom-storage.critical {
    color:      rgba(238, 46, 36, 1);
}

@keyframes blink {
    to {
        background-color: #ffffff;
        color: black;
    }
}

